@@ -46,6 +46,9 @@ Library
 Tests
 -----
 
+- Issue #21493: Added test for ntpath.expanduser().  Original patch by
+  Claudiu Popa.
+
 - Issue #19925: Added tests for the spwd module. Original patch by Vajrasky Kok.
 
 - Issue #21522: Added Tkinter tests for Listbox.itemconfigure(),
